<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:context=".ui.activities.MainActivity">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medial_24"
                android:paddingTop="@dimen/spacing_medial_24">

                <LinearLayout
                    style="@style/text_container">

                    <TextView
                        style="@style/text.big"
                        android:text="@string/count_rating"/>

                    <TextView
                        style="@style/text"
                        android:text="@string/rating"/>
                </LinearLayout>

                <View
                    style="@style/vertical_view"/>

                <LinearLayout
                    style="@style/text_container">

                    <TextView
                        style="@style/text.big"
                        android:text="@string/count_code"/>

                    <TextView
                        style="@style/text"
                        android:text="@string/string_code"/>
                </LinearLayout>

                <View
                    style="@style/vertical_view"/>

                <LinearLayout
                    style="@style/text_container">

                    <TextView
                        style="@style/text.big"
                        android:text="@string/count_project"/>

                    <TextView
                        style="@style/text"
                        android:text="@string/project"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/edit_text"
                            android:hint="@string/phone_hint"
                            android:inputType="phone"
                            android:text="@string/phone_text"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>
            </LinearLayout>

            <View
                style="@style/horizontal_view"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/edit_text"
                            android:hint="@string/email_hint"
                            android:inputType="textEmailAddress"
                            android:text="@string/email_text"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>
            </LinearLayout>

            <View
                style="@style/horizontal_view"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/vk"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/edit_text"
                            android:hint="@string/vk_hint"
                            android:inputType="text"
                            android:text="@string/vk_text"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                style="@style/horizontal_view"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/github"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/edit_text"
                            android:hint="@string/github_hint"
                            android:inputType="text"
                            android:text="@string/github_text"
                            />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                style="@style/horizontal_view"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_account_box_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/edit_text"
                            android:hint="@string/about_hint"
                            android:inputType="textMultiLine"
                            android:text="@string/about_text"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
